--- a/appsettings.json
+++ b/appsettings.json
@@ -7,7 +7,7 @@
     }
   },
   "AllowedHosts": "*",
-  "AppSettings": {
+  "AppSettings.Expert": {
     "ApiEndpoint": "https://draft.azure-api.net/xyz/api/client/v1.0/request",
     "ApiKey": "MyApiKey",
     "CookieKey": "state",
