--- a/Properties/launchSettings.json
+++ b/Properties/launchSettings.json
@@ -28,6 +28,7 @@
       "commandName": "Project",
       "launchBrowser": true,
       "environmentVariables": {
+        "ASPNETCORE_ENVIRONMENT": "Development"
       },
       "applicationUrl.0": "https://0.0.0.0:5001,http://0.0.0.0:5002",
       "applicationUrl": "https://0.0.0.0:5001"
