--- a/appsettings.json
+++ b/appsettings.json
@@ -10,6 +10,7 @@
   "AppSettings.Expert": {
     "ApiEndpoint": "https://draft.azure-api.net/xyz/api/client/v1.0/request",
     "ApiKey": "MyApiKey",
+    "UseAkaMs": false,
     "CookieKey": "state",
     "CookieExpiresInSeconds": 7200,
     "CacheExpiresInSeconds": 3600,
