AppSettings naming err

--- a/appsettings.json
+++ b/appsettings.json
@@ -7,7 +7,7 @@
     }
   },
   "AllowedHosts": "*",
-  "AppSettings.Expert": {
+  "AppSettings": {
     "ApiEndpoint": "https://draft.azure-api.net/xyz/api/client/v1.0/request",
     "ApiKey": "MyApiKey",
     "UseAkaMs": false,
