--- a/appsettings.json
+++ b/appsettings.json
@@ -8,7 +8,7 @@
   },
   "AllowedHosts": "*",
   "AppSettings": {
-    "ActiveCredentialType": "AppSettings.Cljungdemob2cMembership"
+    "ActiveCredentialType": "AppSettings.VerifiedCredentialExpert"
   },
   "AppSettings.VerifiedCredentialExpert": {
     "ApiEndpoint": "https://draft.azure-api.net/xyz/api/client/v1.0/request",
