--- a/Properties/launchSettings.json
+++ b/Properties/launchSettings.json
@@ -2,9 +2,10 @@
   "profiles": {
     "client_api_test_service_dotnet": {
       "commandName": "Project",
-      "commandLineArgs": "/presentationRequestConfigFile=C:\\Users\\cljung\\src\\DID\\client-api-test-service-dotnet\\requests\\presentation_request_cljungdemob2c.json /issuanceRequestConfigFile=C:\\Users\\cljung\\src\\DID\\client-api-test-service-dotnet\\requests\\issuance_request_cljungdemob2c.json",
       "launchBrowser": true,
       "environmentVariables": {
+        "presentationRequestConfigFile": "C:\\Users\\cljung\\src\\DID\\client-api-test-service-dotnet\\requests\\presentation_request_cljungdemob2c.json",
+        "issuanceRequestConfigFile": "C:\\Users\\cljung\\src\\DID\\client-api-test-service-dotnet\\requests\\issuance_request_cljungdemob2c.json",
         "ASPNETCORE_ENVIRONMENT": "Development"
       },
       "applicationUrl.0": "https://0.0.0.0:5001,http://0.0.0.0:5002",
