--- a/AA.DIDApi.csproj
+++ b/AA.DIDApi.csproj
@@ -2,7 +2,7 @@
 
   <PropertyGroup>
     <TargetFramework>netcoreapp3.1</TargetFramework>
-    <RootNamespace>client_api_test_service_dotnet</RootNamespace>
+    <RootNamespace>AA.DIDApi</RootNamespace>
     <UserSecretsId>8fd0f01b-c238-475c-97dd-6638d6aa0463</UserSecretsId>
     <DockerDefaultTargetOS>Windows</DockerDefaultTargetOS>
     <DockerfileContext>.</DockerfileContext>
