--- a/Properties/launchSettings.json
+++ b/Properties/launchSettings.json
@@ -1,17 +1,17 @@
 {
   "profiles": {
-    "client_api_test_service_dotnet": {
+    "AA.DIDApi": {
       "commandName": "Project",
       "launchBrowser": true,
       "environmentVariables": {
-        "presentationRequestConfigFile": "C:\\Users\\cljung\\src\\DID\\client-api-test-service-dotnet\\requests\\presentation_request_cljungdemob2c.json",
-        "issuanceRequestConfigFile": "C:\\Users\\cljung\\src\\DID\\client-api-test-service-dotnet\\requests\\issuance_request_cljungdemob2c.json",
+        "presentationRequestConfigFile": "C:\\Development\\AccessAmerica\\client-api-test-service-dotnet\\requests\\presentation_request_cljungdemob2c.json",
+        "issuanceRequestConfigFile": "C:\\Development\\AccessAmerica\\client-api-test-service-dotnet\\requests\\issuance_request_cljungdemob2c.json",
         "ASPNETCORE_ENVIRONMENT": "Development"
       },
       "applicationUrl.0": "https://0.0.0.0:5001,http://0.0.0.0:5002",
       "applicationUrl": "http://0.0.0.0:5002"
     },
-    "ssl_client_api_test_service_dotnet": {
+    "ssl_AA.DIDApi": {
       "commandName": "Project",
       "launchBrowser": true,
       "environmentVariables": {
