--- a/Properties/launchSettings.json
+++ b/Properties/launchSettings.json
@@ -4,8 +4,8 @@
       "commandName": "Project",
       "launchBrowser": true,
       "environmentVariables": {
-        "presentationRequestConfigFile": "C:\\Development\\AccessAmerica\\client-api-test-service-dotnet\\requests\\presentation_request_cljungdemob2c.json",
-        "issuanceRequestConfigFile": "C:\\Development\\AccessAmerica\\client-api-test-service-dotnet\\requests\\issuance_request_cljungdemob2c.json",
+        "presentationRequestConfigFile": "requests\\presentation_request_cljungdemob2c.json",
+        "issuanceRequestConfigFile": "requests\\issuance_request_cljungdemob2c.json",
         "ASPNETCORE_ENVIRONMENT": "Development"
       },
       "applicationUrl.0": "https://0.0.0.0:5001,http://0.0.0.0:5002",
