Updated to VC Client API v0.3

--- a/appsettings.json
+++ b/appsettings.json
@@ -8,7 +8,13 @@
   },
   "AllowedHosts": "*",
   "AppSettings": {
-    "ApiEndpoint": "https://dev.did.msidentity.com/v1.0/abc/verifiablecredentials/request",
+    "ApiEndpoint.dev": "https://dev.did.msidentity.com/v1.0/abc/verifiablecredentials/request",
+    "ApiEndpoint": "https://beta.did.msidentity.com/v1.0/{0}/verifiablecredentials/request",
+    "Authority": "https://login.microsoftonline.com/{0}",
+    "scope": "bbb94529-53a3-4be5-a069-7eaf2712b826/.default",
+    "TenantId": "",
+    "ClientId": "",
+    "ClientSecret": "",
     "ApiKey": "MyApiKey",
     "CookieKey": "state",
     "CookieExpiresInSeconds": 7200,
